--- a/Suresh/slide/Latex_basic.ipynb
+++ b/Suresh/slide/Latex_basic.ipynb
@@ -35,10 +35,7 @@
     }
    },
    "source": [
-    "\n",
-    "<small>\n",
-    "- <b>LaTeX</b> project was started in 1978 by Donald E. Knuth (University of Stanford) <br>\n",
-    " </small>\n"
+    "-  project was started in 1978 by Donald E. Knuth (University of Stanford) <br>"
    ]
   },
   {
